--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,10 @@
             <div>12321123123</div>
           </div>
         </div>
+
+        <div class="main-page__images">
+          <img class="main-page__img" src="images/main-page/mainPage-foto.png" alt="" width="200" height="400">
+        </div>
       </div>
     </section>
   </main>
