--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,10 @@
       <nav class="header__nav header-nav">
         <ul class="header-nav__list">
           <li class="header-nav__item">
-            <a class="header-nav__link header-nav__link--active" href="#">Обо мне</a>
+            <a class="header-nav__link header-nav__link--active" href="#">Главная</a>
+          </li>
+          <li class="header-nav__item">
+            <a class="header-nav__link" href="#">Обо мне</a>
           </li>
           <li class="header-nav__item">
             <a class="header-nav__link" href="#">Услуги</a>
@@ -56,18 +59,64 @@
   <main class="main">
     <div class="wrapper">
       <div class="inner">
+        
+        <section class="about-me section" >
+          <div class="main-page__container">
+
+          </div>
+        </section>
+
         <section class="main-page section">
           <div class="main-page__container">
-            <div class="main-page__suptitle">Привет, меня зовут</div>
-            <h2 class="main-page__title">Родченко Никита</h2>
-            <div class="main-page__subtitle">
-              и я 
-              <div class="main-page__subtitle-list">
-                <div>верстальщик</div>
-                <div>самый лучший муж</div>
-                <div>frontend</div>
-                <div>12321123123</div>
+
+            <div class="main-page__content">
+              <div class="main-page__suptitle">Привет, меня зовут</div>
+              <h2 class="main-page__title">Родченко Никита</h2>
+              <div class="main-page__subtitle">
+                и я 
+                <div class="main-page__subtitle-list">
+                  <div>верстальщик</div>
+                  <div>самый лучший муж</div>
+                  <div>frontend</div>
+                  <div>12321123123</div>
+                </div>
               </div>
+
+              <p>Для меня WEB - разработка это не просто работа, но и дело приносящее огромное удовольствие</p>
+
+              <ul class="main-page__list">
+                <li class="main-page__item">
+                  <a class="main-page__link" href="#">
+                    <span class="main-page__icon" style="-webkit-mask-image: url('images/sprite.svg#telegram-icon'); mask-image: url('images/sprite.svg#telegram-icon');"></span>
+                  </a>
+                </li>
+
+                <li class="main-page__item">
+                  <a class="main-page__link" href="#">
+                    <span class="main-page__icon" style="-webkit-mask-image: url('images/sprite.svg#whatsapp'); mask-image: url('images/sprite.svg#whatsapp');"></span>
+                  </a>
+                </li>
+
+                <li class="main-page__item">
+                  <a class="main-page__link" href="#">
+                    <span class="main-page__icon" style="-webkit-mask-image: url('images/sprite.svg#instagram'); mask-image: url('images/sprite.svg#instagram');"></span>
+                  </a>
+                </li>
+
+                <li class="main-page__item">
+                  <a class="main-page__link" href="#">
+                    <span class="main-page__icon" style="-webkit-mask-image: url('images/sprite.svg#mail-icon'); mask-image: url('images/sprite.svg#mail-icon');"></span>
+                  </a>
+                </li>
+
+                <li class="main-page__item">
+                  <a class="main-page__link" href="#">
+                    <span class="main-page__icon" style="-webkit-mask-image: url('images/sprite.svg#telephone'); mask-image: url('images/sprite.svg#telephone');"></span>
+                  </a>
+                </li>
+              </ul>
+
+              <a class="main-page__btn btn" href="#" download="https://ru.pinterest.com/pin/369013763232009797/" value="Скачать резюме">Скачать резюме</a>
             </div>
     
             <div class="main-page__images">
@@ -76,13 +125,13 @@
           </div>
         </section>
 
-        <section class="main-page section" style="background-color: yellow;">
+        <section class="main-page section" style="background-color: grey;">
           <div class="main-page__container">
             <div class="main-page__suptitle">Привет, меня зовут</div>
             <h2 class="main-page__title">Родченко Никита</h2>
             <div class="main-page__subtitle">
               и я 
-              <div class="main-page__subtitle-list">
+              <div class="main-page__subtitle-listr">
                 <div>верстальщик</div>
                 <div>самый лучший муж</div>
                 <div>frontend</div>
@@ -102,7 +151,7 @@
             <h2 class="main-page__title">Родченко Никита</h2>
             <div class="main-page__subtitle">
               и я 
-              <div class="main-page__subtitle-list">
+              <div class="main-page__subtitle-listr">
                 <div>верстальщик</div>
                 <div>самый лучший муж</div>
                 <div>frontend</div>
@@ -122,7 +171,7 @@
             <h2 class="main-page__title">Родченко Никита</h2>
             <div class="main-page__subtitle">
               и я 
-              <div class="main-page__subtitle-list">
+              <div class="main-page__subtitle-listr">
                 <div>верстальщик</div>
                 <div>самый лучший муж</div>
                 <div>frontend</div>
@@ -139,8 +188,6 @@
     </div>
 
   </main>
-
-  
 
   <footer class="footer">
   </footer>
