--- a/app/index.html
+++ b/app/index.html
@@ -59,10 +59,42 @@
   <main class="main">
     <div class="wrapper">
       <div class="inner">
+
+        <section class="contacts section">
+          <div class="contacts__container">
+            <h2 class="contacts__title">Связаться со мной</h2>
+
+            <form class="contacts__form contacts-form" action="#">
+              <div class="contacts-form__item">
+                <label class="contacts-form__label" for="name">
+                  <input class="contacts-form__input" type="text" name="name">
+                </label>
+              </div>
+
+              <div class="contacts-form__item">
+                <label class="contacts-form__label" for="email">
+                  <input class="contacts-form__input" type="email" name="email">
+                </label>
+              </div>
+
+              <div class="contacts-form__item">
+                <label class="contacts-form__label" for="number">
+                  <input class="contacts-form__input" type="tel" name="number">
+                </label>
+              </div>
+
+              <div class="contacts-form__item">
+                <label class="contacts-form__label" for="text">
+                  <textarea class="contacts-form__textarea" name="text"></textarea>
+                </label>
+              </div>
+            </form>
+          </div>
+        </section>
         
         <section class="about-me section" >
           <div class="main-page__container">
-
+            
           </div>
         </section>
 
